Theming update and bump version

--- a/src/css/__test.scss
+++ b/src/css/__test.scss
@@ -12,5 +12,6 @@
 @import "form";
 @import "slider";
 
-// disclaimer widget
+// widgets
 @import "../widgets/Disclaimer/styles/Disclaimer";
+@import "../widgets/LayerListLegend/styles/LayerListLegend";
