--- a/dev/main.scss
+++ b/dev/main.scss
@@ -7,6 +7,7 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  font-size: 14px;
 }
 
 @import "../src/css/tabs.scss";
@@ -14,3 +15,4 @@ body,
 @import "../src/css/slider.scss";
 
 @import "../src/widgets/LayerListLegend/styles/LayerListLegend.scss";
+@import "../src/widgets/PrintSnapshot/styles/PrintSnapshot.scss";
