Add MapNavigation widget and bump version

--- a/src/css/__test.scss
+++ b/src/css/__test.scss
@@ -15,3 +15,5 @@
 // widgets
 @import "../widgets/Disclaimer/styles/Disclaimer";
 @import "../widgets/LayerListLegend/styles/LayerListLegend";
+@import "../widgets/MapNavigation/styles/MapNavigation";
+@import "../widgets/PrintSnapshot/styles/PrintSnapshot";
