add show labels check box to Measure and bump version

--- a/dev/main.scss
+++ b/dev/main.scss
@@ -15,4 +15,5 @@ body,
 @import "../src/css/slider.scss";
 
 @import "../src/widgets/Markup/styles/Markup.scss";
+@import "../src/widgets/Measure/styles/Measure.scss";
 @import "../src/widgets/symbolEditors/styles/SymbolEditor.scss";
